// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should redirect 1`] = `
<div>
  Error because Redirect
</div>
`;

exports[`should render AttachmentView correctly 1`] = `
<div
  className="details"
>
  <div
    documents={
      Array [
        Object {
          "file1": "file1",
          "file2": "file2",
        },
      ]
    }
    title="Title of the feature"
  >
    Header
  </div>
  <div
    section="attachmentFiles"
  >
    Menu
  </div>
  <div
    className="details__content"
  >
    <div>
      Attachmentu view
    </div>
  </div>
</div>
`;

exports[`should render defaultView correctly 1`] = `
<div
  className="details"
>
  <div
    documents={
      Array [
        Object {
          "file1": "file1",
          "file2": "file2",
        },
      ]
    }
    title="Title of the feature"
  >
    Header
  </div>
  <div
    section="default"
  >
    Menu
  </div>
  <div
    className="details__content"
  >
    <div
      properties={
        Object {
          "foo": "foo",
        }
      }
    >
      Default view
    </div>
  </div>
</div>
`;
